# energy-forecasting

./: .gitignore  docker-compose.yml
.github/workflows/: ci_cd_ml_pipeline.yml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: ml_pipeline_dag.py
api-frontend/frontend/: components.py  main.py  settings.py
app-api/: Dockerfile  pyproject.toml
app-api/api/: __main__.py  application.py  config.py  views.py
app-api/api/schemas/: area_values.py  consumer_type_values.py  predictions.py
app-frontend/: Dockerfile  pyproject.toml
app-frontend/frontend/: components.py  main.py  settings.py
app-monitoring/: Dockerfile  pyproject.toml
app-monitoring/monitoring/: components.py  main.py  settings.py
batch-prediction-pipeline/: pyproject.toml
batch-prediction-pipeline/batch_prediction_pipeline/: batch.py  data.py  monitoring.py
batch_prediction_pipeline/: pyproject.toml
batch_prediction_pipeline/batch_prediction_pipeline/: settings.py  utils.py
feature-pipeline/: pyproject.toml
feature-pipeline/feature_pipeline/: feature_view.py  pipeline.py
feature-pipeline/feature_pipeline/utils/: extract.py  load.py  settings.py  utils.py  validation.py
feature_pipeline/: .gitignore
feature_pipeline/feature_pipeline/: feature_view.py
feature_pipeline/feature_pipeline/utils/: cleaning.py  settings.py  utils.py
training-pipeline/: pyproject.toml
training-pipeline/training_pipeline/: best_config.py  data.py  hyperparameter_tuning.py  models.py  train.py  utils.py
training_pipeline/: pyproject.toml
training_pipeline/training_pipeline/: hyperparameter_tuning.py  models.py  transformers.py  utils.py
