[tool.poetry]
name = "app-api"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.34.0"
pydantic = ">=1.10.6,<1.11.0"
fastapi = "^0.115.8"
pandas = "^2.2.3"
gcsfs = "^2025.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
