[tool.poetry]
name = "app-api"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.34.0"
pydantic = ">=1.10.6,<1.11.0"
fastapi = "^0.115.8"
pandas = ">=1.5.3,<1.6.0"
gcsfs = "^2025.2.0"
numpy = "1.26.4"
python-dotenv = "^1.0.1"
pyarrow = "^19.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
