[tool.poetry]
name = "batch-prediction-pipeline"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
hopsworks = "^4.1.5"
google-cloud-storage = "^2.19.0"
fire = "^0.7.0"
joblib = "^1.4.2"
python-dotenv = "^1.0.1"
pyarrow = "^19.0.0"
sktime = "0.16.1"
training-pipeline = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "http://localhost/"