[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fire = "^0.7.0"
pandas = ">=1.3.5"
python-dotenv = "^1.0.1"
setuptools = "^75.7.0"
hopsworks = "^4.1.4"
great-expectations = "^0.18"
pyarrow = "^18.1.0"
confluent-kafka = "<=1.9.0"
ipykernel = "^6.29.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
