[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"
packages = [{include = "feature_pipeline"}]

[tool.poetry.dependencies]
python = "~3.9"
hopsworks = "^4.1.5"
confluent-kafka = "^2.8.0"
fire = "^0.7.0"
python-dotenv = "^1.0.1"
pyarrow = "^19.0.0"
great-expectations = "^0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
