[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
hopsworks = "^4.1.4"
wandb = "^0.19.2"
pandas = ">=1.3.5"
lightgbm = "^4.5.0"
python-dotenv = "^1.0.1"
fire = "^0.7.0"
pyarrow = "^18.1.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
sktime = "^0.16.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
