[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
hopsworks = "^4.1.5"
wandb = "^0.19.5"
lightgbm = "^4.5.0"
python-dotenv = "^1.0.1"
fire = "^0.7.0"
pyarrow = "^19.0.0"
matplotlib = "3.9"
seaborn = "^0.13.2"
sktime = "0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
